--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -28,7 +28,7 @@ if (flutterVersionName == null) {
 
 android {
     namespace = "com.psychiatrist.app"
-    compileSdk = flutter.compileSdkVersion
+    compileSdk = 34
     ndkVersion = flutter.ndkVersion
 
     compileOptions {
@@ -36,15 +36,23 @@ android {
         targetCompatibility = JavaVersion.VERSION_1_8
     }
 
+        kotlinOptions {
+        jvmTarget = "1.8"
+    }
+
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId = "com.psychiatrist.app"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdk = 21
+        minSdk = 24
+        buildToolsVersion = "33.0.0"
+
         targetSdk = flutter.targetSdkVersion
         versionCode = flutterVersionCode.toInteger()
         versionName = flutterVersionName
+        multiDexEnabled true
+
     }
 
     buildTypes {
@@ -54,8 +62,30 @@ android {
             signingConfig = signingConfigs.debug
         }
     }
+
+    tasks.withType(JavaCompile) {
+        options.compilerArgs << "-Xlint:-options"
+    }
 }
+
 
 flutter {
     source = "../.."
+}
+
+dependencies {
+    // Import the BoM for the Firebase platform
+    implementation(platform("com.google.firebase:firebase-bom:33.1.1"))
+        implementation ('androidx.multidex:multidex:2.0.1')
+
+
+                            //To block reCAPCHA, after publishing app on play store
+
+// implementation ('androidx.browser:browser:1.3.0')
+
+
+
+    // Add the dependency for the Firebase Authentication library
+    // When using the BoM, you don't specify versions in Firebase library dependencies
+    implementation("com.google.firebase:firebase-auth")
 }
