--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_core: ^2.15.1
+  firebase_auth: ^4.7.5
+  font_awesome_flutter: ^10.1.0
+  flutter_svg: ^1.0.0
+  intl: ^0.17.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -61,8 +66,11 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
-
+    - assets/wallet.svg
+    - assets/icon.svg
+    - assets/icon (1).svg
+    - assets/icon (2).svg
+    - assets/icon (3).svg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
