--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^2.15.1
-  firebase_auth: ^4.7.5
   font_awesome_flutter: ^10.1.0
   flutter_svg: ^1.0.0
   intl: ^0.17.0
@@ -44,6 +42,7 @@ dependencies:
   firebase_core: ^3.1.1
   firebase_auth: ^5.1.2
   firebase_app_check: ^0.3.0+3
+  google_fonts: ^6.2.1
 
 
 dev_dependencies:
@@ -75,6 +74,7 @@ flutter:
     - assets/icon (1).svg
     - assets/icon (2).svg
     - assets/icon (3).svg
+    - assets/ProfileIcons/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
