--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -91,6 +91,10 @@ flutter:
     - family: Poppins
       fonts:
         - asset: fonts/Poppins-Regular.ttf
+    - family: Inter
+      fonts:
+        - asset: fonts/Inter_18pt-Regular.ttf
+
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
